postcard-bindgen-core/tests/snapshots/javascript__ts_types.snap
---
source: postcard-bindgen-core/tests/javascript.rs
expression: ts_file
snapshot_kind: text
---
declare type u8 = number
declare type u16 = number
declare type u32 = number
declare type u64 = number
declare type u128 = number
declare type usize = number
declare type i8 = number
declare type i16 = number
declare type i32 = number
declare type i64 = number
declare type i128 = number
declare type isize = number

declare type ArrayLengthMutationKeys = "splice" | "push" | "pop" | "shift" | "unshift"
declare type FixedLengthArray<T, L extends number, TObj = [T, ...Array<T>]> =
    Pick<TObj, Exclude<keyof TObj, ArrayLengthMutationKeys>>
    & {
        readonly length: L
        [ I : number ] : T
        [Symbol.iterator]: () => IterableIterator<T>
    }

export type StructType = { field_1: u32, field_2: string, field_3: u32[], field_4: StructType[], field_5: { start: u32, end: u32 }, field_6: {[key: string]: u32;}, field_7: Map<u32, u32>, field_8: u32 | undefined, field_9: boolean, field_10: [u32, string], field_11: FixedLengthArray<string, 3>, field_12: u32[], field_13: f32 }
export type UnitStructType = { }
export type TupleStructType = [u32, string]
export type EnumType = { tag: "AVariant" } | { tag: "BVariant", value: [u32, string] } | { tag: "CVariant", value: { field_1: u32, field_2: string, struct_type: StructType } }

export type Type = "StructType" | "UnitStructType" | "TupleStructType" | "EnumType"
declare type ValueType<T extends Type> = T extends "StructType" ? StructType : T extends "UnitStructType" ? UnitStructType : T extends "TupleStructType" ? TupleStructType : T extends "EnumType" ? EnumType : void

export function serialize<T extends Type>(type: T, value: ValueType<T>): u8[]
export function deserialize<T extends Type>(type: T, bytes: u8[]): ValueType<T>
